include/El/blas_like/level1.h

/* Alpha X Plus Y (AXPY)
   ===================== */
/* Y := alpha X + Y */
EL_EXPORT ElError ElAxpy_i
( ElInt alpha, ElConstMatrix_i X, ElMatrix_i Y );
EL_EXPORT ElError ElAxpy_s
( float alpha, ElConstMatrix_s X, ElMatrix_s Y );
EL_EXPORT ElError ElAxpy_d
( double alpha, ElConstMatrix_d X, ElMatrix_d Y );
EL_EXPORT ElError ElAxpy_c
( complex_float alpha, ElConstMatrix_c X, ElMatrix_c Y );
EL_EXPORT ElError ElAxpy_z
( complex_double alpha, ElConstMatrix_z X, ElMatrix_z Y );
EL_EXPORT ElError ElAxpyDist_i
( ElInt alpha, ElConstDistMatrix_i X, ElDistMatrix_i Y );
EL_EXPORT ElError ElAxpyDist_s
( float alpha, ElConstDistMatrix_s X, ElDistMatrix_s Y );
EL_EXPORT ElError ElAxpyDist_d
( double alpha, ElConstDistMatrix_d X, ElDistMatrix_d Y );
EL_EXPORT ElError ElAxpyDist_c
( complex_float alpha, ElConstDistMatrix_c X, ElDistMatrix_c Y );
EL_EXPORT ElError ElAxpyDist_z
( complex_double alpha, ElConstDistMatrix_z X, ElDistMatrix_z Y );
EL_EXPORT ElError ElAxpySparse_i
( ElInt alpha, ElConstSparseMatrix_i X, ElSparseMatrix_i Y );
EL_EXPORT ElError ElAxpySparse_s
( float alpha, ElConstSparseMatrix_s X, ElSparseMatrix_s Y );
EL_EXPORT ElError ElAxpySparse_d
( double alpha, ElConstSparseMatrix_d X, ElSparseMatrix_d Y );
EL_EXPORT ElError ElAxpySparse_c
( complex_float alpha, ElConstSparseMatrix_c X, ElSparseMatrix_c Y );
EL_EXPORT ElError ElAxpySparse_z
( complex_double alpha, ElConstSparseMatrix_z X, ElSparseMatrix_z Y );
EL_EXPORT ElError ElAxpyDistSparse_i
( ElInt alpha, ElConstDistSparseMatrix_i X, ElDistSparseMatrix_i Y );
EL_EXPORT ElError ElAxpyDistSparse_s
( float alpha, ElConstDistSparseMatrix_s X, ElDistSparseMatrix_s Y );
EL_EXPORT ElError ElAxpyDistSparse_d
( double alpha, ElConstDistSparseMatrix_d X, ElDistSparseMatrix_d Y );
EL_EXPORT ElError ElAxpyDistSparse_c
( complex_float alpha, ElConstDistSparseMatrix_c X, ElDistSparseMatrix_c Y );
EL_EXPORT ElError ElAxpyDistSparse_z
( complex_double alpha, ElConstDistSparseMatrix_z X, ElDistSparseMatrix_z Y );
EL_EXPORT ElError ElAxpyDistMultiVec_i
( ElInt alpha, ElConstDistMultiVec_i X, ElDistMultiVec_i Y );
EL_EXPORT ElError ElAxpyDistMultiVec_s
( float alpha, ElConstDistMultiVec_s X, ElDistMultiVec_s Y );
EL_EXPORT ElError ElAxpyDistMultiVec_d
( double alpha, ElConstDistMultiVec_d X, ElDistMultiVec_d Y );
EL_EXPORT ElError ElAxpyDistMultiVec_c
( complex_float alpha, ElConstDistMultiVec_c X, ElDistMultiVec_c Y );
EL_EXPORT ElError ElAxpyDistMultiVec_z
( complex_double alpha, ElConstDistMultiVec_z X, ElDistMultiVec_z Y );
/* Trapezoidal Axpy
   ================ */
/* tri(Y) := tri(alpha A X + Y) */
EL_EXPORT ElError ElAxpyTrapezoid_i
( ElUpperOrLower uplo, ElInt alpha, 
  ElConstMatrix_i X, ElMatrix_i Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoid_s
( ElUpperOrLower uplo, float alpha, 
  ElConstMatrix_s X, ElMatrix_s Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoid_d
( ElUpperOrLower uplo, double alpha, 
  ElConstMatrix_d X, ElMatrix_d Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoid_c
( ElUpperOrLower uplo, complex_float alpha, 
  ElConstMatrix_c X, ElMatrix_c Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoid_z
( ElUpperOrLower uplo, complex_double alpha, 
  ElConstMatrix_z X, ElMatrix_z Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDist_i
( ElUpperOrLower uplo, ElInt alpha, 
  ElConstDistMatrix_i X, ElDistMatrix_i Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDist_s
( ElUpperOrLower uplo, float alpha, 
  ElConstDistMatrix_s X, ElDistMatrix_s Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDist_d
( ElUpperOrLower uplo, double alpha, 
  ElConstDistMatrix_d X, ElDistMatrix_d Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDist_c
( ElUpperOrLower uplo, complex_float alpha, 
  ElConstDistMatrix_c X, ElDistMatrix_c Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDist_z
( ElUpperOrLower uplo, complex_double alpha, 
  ElConstDistMatrix_z X, ElDistMatrix_z Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidSparse_i
( ElUpperOrLower uplo, ElInt alpha, 
  ElConstSparseMatrix_i X, ElSparseMatrix_i Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidSparse_s
( ElUpperOrLower uplo, float alpha, 
  ElConstSparseMatrix_s X, ElSparseMatrix_s Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidSparse_d
( ElUpperOrLower uplo, double alpha, 
  ElConstSparseMatrix_d X, ElSparseMatrix_d Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidSparse_c
( ElUpperOrLower uplo, complex_float alpha, 
  ElConstSparseMatrix_c X, ElSparseMatrix_c Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidSparse_z
( ElUpperOrLower uplo, complex_double alpha, 
  ElConstSparseMatrix_z X, ElSparseMatrix_z Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDistSparse_i
( ElUpperOrLower uplo, ElInt alpha, 
  ElConstDistSparseMatrix_i X, ElDistSparseMatrix_i Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDistSparse_s
( ElUpperOrLower uplo, float alpha, 
  ElConstDistSparseMatrix_s X, ElDistSparseMatrix_s Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDistSparse_d
( ElUpperOrLower uplo, double alpha, 
  ElConstDistSparseMatrix_d X, ElDistSparseMatrix_d Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDistSparse_c
( ElUpperOrLower uplo, complex_float alpha, 
  ElConstDistSparseMatrix_c X, ElDistSparseMatrix_c Y, ElInt offset );
EL_EXPORT ElError ElAxpyTrapezoidDistSparse_z
( ElUpperOrLower uplo, complex_double alpha, 
  ElConstDistSparseMatrix_z X, ElDistSparseMatrix_z Y, ElInt offset );
/* Column norms
   ============ */

/* Two-norm
   -------- */
/* TODO */
EL_EXPORT ElError ElColumnTwoNormsDistMultiVec_s
( ElConstDistMultiVec_s A, ElMatrix_s norms );
EL_EXPORT ElError ElColumnTwoNormsDistMultiVec_d
( ElConstDistMultiVec_d A, ElMatrix_d norms );
EL_EXPORT ElError ElColumnTwoNormsDistMultiVec_c
( ElConstDistMultiVec_c A, ElMatrix_s norms );
EL_EXPORT ElError ElColumnTwoNormsDistMultiVec_z
( ElConstDistMultiVec_z A, ElMatrix_d norms );
/* Concatenate
   =========== */

/* Horizontal concatenation
   ------------------------ */
/* C := [A, B] */

EL_EXPORT ElError ElHCat_i
( ElConstMatrix_i A, ElConstMatrix_i B, ElMatrix_i C );
EL_EXPORT ElError ElHCat_s
( ElConstMatrix_s A, ElConstMatrix_s B, ElMatrix_s C );
EL_EXPORT ElError ElHCat_d
( ElConstMatrix_d A, ElConstMatrix_d B, ElMatrix_d C );
EL_EXPORT ElError ElHCat_c
( ElConstMatrix_c A, ElConstMatrix_c B, ElMatrix_c C );
EL_EXPORT ElError ElHCat_z
( ElConstMatrix_z A, ElConstMatrix_z B, ElMatrix_z C );
EL_EXPORT ElError ElHCatDist_i
( ElConstDistMatrix_i A, ElConstDistMatrix_i B, ElDistMatrix_i C );
EL_EXPORT ElError ElHCatDist_s
( ElConstDistMatrix_s A, ElConstDistMatrix_s B, ElDistMatrix_s C );
EL_EXPORT ElError ElHCatDist_d
( ElConstDistMatrix_d A, ElConstDistMatrix_d B, ElDistMatrix_d C );
EL_EXPORT ElError ElHCatDist_c
( ElConstDistMatrix_c A, ElConstDistMatrix_c B, ElDistMatrix_c C );
EL_EXPORT ElError ElHCatDist_z
( ElConstDistMatrix_z A, ElConstDistMatrix_z B, ElDistMatrix_z C );
EL_EXPORT ElError ElHCatSparse_i
( ElConstSparseMatrix_i A, ElConstSparseMatrix_i B, ElSparseMatrix_i C );
EL_EXPORT ElError ElHCatSparse_s
( ElConstSparseMatrix_s A, ElConstSparseMatrix_s B, ElSparseMatrix_s C );
EL_EXPORT ElError ElHCatSparse_d
( ElConstSparseMatrix_d A, ElConstSparseMatrix_d B, ElSparseMatrix_d C );
EL_EXPORT ElError ElHCatSparse_c
( ElConstSparseMatrix_c A, ElConstSparseMatrix_c B, ElSparseMatrix_c C );
EL_EXPORT ElError ElHCatSparse_z
( ElConstSparseMatrix_z A, ElConstSparseMatrix_z B, ElSparseMatrix_z C );
EL_EXPORT ElError ElHCatDistSparse_i
( ElConstDistSparseMatrix_i A, ElConstDistSparseMatrix_i B, 
  ElDistSparseMatrix_i C );
EL_EXPORT ElError ElHCatDistSparse_s
( ElConstDistSparseMatrix_s A, ElConstDistSparseMatrix_s B, 
  ElDistSparseMatrix_s C );
EL_EXPORT ElError ElHCatDistSparse_d
( ElConstDistSparseMatrix_d A, ElConstDistSparseMatrix_d B, 
  ElDistSparseMatrix_d C );
EL_EXPORT ElError ElHCatDistSparse_c
( ElConstDistSparseMatrix_c A, ElConstDistSparseMatrix_c B, 
  ElDistSparseMatrix_c C );
EL_EXPORT ElError ElHCatDistSparse_z
( ElConstDistSparseMatrix_z A, ElConstDistSparseMatrix_z B, 
  ElDistSparseMatrix_z C );
EL_EXPORT ElError ElHCatDistMultiVec_i
( ElConstDistMultiVec_i A, ElConstDistMultiVec_i B, 
  ElDistMultiVec_i C );
EL_EXPORT ElError ElHCatDistMultiVec_s
( ElConstDistMultiVec_s A, ElConstDistMultiVec_s B, 
  ElDistMultiVec_s C );
EL_EXPORT ElError ElHCatDistMultiVec_d
( ElConstDistMultiVec_d A, ElConstDistMultiVec_d B, 
  ElDistMultiVec_d C );
EL_EXPORT ElError ElHCatDistMultiVec_c
( ElConstDistMultiVec_c A, ElConstDistMultiVec_c B, 
  ElDistMultiVec_c C );
EL_EXPORT ElError ElHCatDistMultiVec_z
( ElConstDistMultiVec_z A, ElConstDistMultiVec_z B, 
  ElDistMultiVec_z C );
/* Vertical concatenation
   ---------------------- */
/* C := [A; B] */

EL_EXPORT ElError ElVCat_i
( ElConstMatrix_i A, ElConstMatrix_i B, ElMatrix_i C );
EL_EXPORT ElError ElVCat_s
( ElConstMatrix_s A, ElConstMatrix_s B, ElMatrix_s C );
EL_EXPORT ElError ElVCat_d
( ElConstMatrix_d A, ElConstMatrix_d B, ElMatrix_d C );
EL_EXPORT ElError ElVCat_c
( ElConstMatrix_c A, ElConstMatrix_c B, ElMatrix_c C );
EL_EXPORT ElError ElVCat_z
( ElConstMatrix_z A, ElConstMatrix_z B, ElMatrix_z C );
EL_EXPORT ElError ElVCatDist_i
( ElConstDistMatrix_i A, ElConstDistMatrix_i B, ElDistMatrix_i C );
EL_EXPORT ElError ElVCatDist_s
( ElConstDistMatrix_s A, ElConstDistMatrix_s B, ElDistMatrix_s C );
EL_EXPORT ElError ElVCatDist_d
( ElConstDistMatrix_d A, ElConstDistMatrix_d B, ElDistMatrix_d C );
EL_EXPORT ElError ElVCatDist_c
( ElConstDistMatrix_c A, ElConstDistMatrix_c B, ElDistMatrix_c C );
EL_EXPORT ElError ElVCatDist_z
( ElConstDistMatrix_z A, ElConstDistMatrix_z B, ElDistMatrix_z C );
EL_EXPORT ElError ElVCatSparse_i
( ElConstSparseMatrix_i A, ElConstSparseMatrix_i B, ElSparseMatrix_i C );
EL_EXPORT ElError ElVCatSparse_s
( ElConstSparseMatrix_s A, ElConstSparseMatrix_s B, ElSparseMatrix_s C );
EL_EXPORT ElError ElVCatSparse_d
( ElConstSparseMatrix_d A, ElConstSparseMatrix_d B, ElSparseMatrix_d C );
EL_EXPORT ElError ElVCatSparse_c
( ElConstSparseMatrix_c A, ElConstSparseMatrix_c B, ElSparseMatrix_c C );
EL_EXPORT ElError ElVCatSparse_z
( ElConstSparseMatrix_z A, ElConstSparseMatrix_z B, ElSparseMatrix_z C );
EL_EXPORT ElError ElVCatDistSparse_i
( ElConstDistSparseMatrix_i A, ElConstDistSparseMatrix_i B, 
  ElDistSparseMatrix_i C );
EL_EXPORT ElError ElVCatDistSparse_s
( ElConstDistSparseMatrix_s A, ElConstDistSparseMatrix_s B, 
  ElDistSparseMatrix_s C );
EL_EXPORT ElError ElVCatDistSparse_d
( ElConstDistSparseMatrix_d A, ElConstDistSparseMatrix_d B, 
  ElDistSparseMatrix_d C );
EL_EXPORT ElError ElVCatDistSparse_c
( ElConstDistSparseMatrix_c A, ElConstDistSparseMatrix_c B, 
  ElDistSparseMatrix_c C );
EL_EXPORT ElError ElVCatDistSparse_z
( ElConstDistSparseMatrix_z A, ElConstDistSparseMatrix_z B, 
  ElDistSparseMatrix_z C );
EL_EXPORT ElError ElVCatDistMultiVec_i
( ElConstDistMultiVec_i A, ElConstDistMultiVec_i B, 
  ElDistMultiVec_i C );
EL_EXPORT ElError ElVCatDistMultiVec_s
( ElConstDistMultiVec_s A, ElConstDistMultiVec_s B, 
  ElDistMultiVec_s C );
EL_EXPORT ElError ElVCatDistMultiVec_d
( ElConstDistMultiVec_d A, ElConstDistMultiVec_d B, 
  ElDistMultiVec_d C );
EL_EXPORT ElError ElVCatDistMultiVec_c
( ElConstDistMultiVec_c A, ElConstDistMultiVec_c B, 
  ElDistMultiVec_c C );
EL_EXPORT ElError ElVCatDistMultiVec_z
( ElConstDistMultiVec_z A, ElConstDistMultiVec_z B, 
  ElDistMultiVec_z C );