python/blas_like/level1.py

#
#  Copyright (c) 2009-2016, Jack Poulson
#  All rights reserved.
#
#  This file is part of Elemental and is under the BSD 2-Clause License, 
#  which can be found in the LICENSE file in the root directory, or at 
#  http://opensource.org/licenses/BSD-2-Clause
#
from ..core import *

from ctypes import CFUNCTYPE

# BLAS 1
# ======

# Axpy
# ----
lib.ElAxpy_i.argtypes = \
lib.ElAxpyDist_i.argtypes = \
lib.ElAxpySparse_i.argtypes = \
lib.ElAxpyDistSparse_i.argtypes = \
lib.ElAxpyDistMultiVec_i.argtypes = \
  [iType,c_void_p,c_void_p]

lib.ElAxpy_s.argtypes = \
lib.ElAxpyDist_s.argtypes = \
lib.ElAxpySparse_s.argtypes = \
lib.ElAxpyDistSparse_s.argtypes = \
lib.ElAxpyDistMultiVec_s.argtypes = \
  [sType,c_void_p,c_void_p]

lib.ElAxpy_d.argtypes = \
lib.ElAxpyDist_d.argtypes = \
lib.ElAxpySparse_d.argtypes = \
lib.ElAxpyDistSparse_d.argtypes = \
lib.ElAxpyDistMultiVec_d.argtypes = \
  [dType,c_void_p,c_void_p]

lib.ElAxpy_c.argtypes = \
lib.ElAxpyDist_c.argtypes = \
lib.ElAxpySparse_c.argtypes = \
lib.ElAxpyDistSparse_c.argtypes = \
lib.ElAxpyDistMultiVec_c.argtypes = \
  [cType,c_void_p,c_void_p]

lib.ElAxpy_z.argtypes = \
lib.ElAxpyDist_z.argtypes = \
lib.ElAxpySparse_z.argtypes = \
lib.ElAxpyDistSparse_z.argtypes = \
lib.ElAxpyDistMultiVec_z.argtypes = \
  [zType,c_void_p,c_void_p]

def Axpy(alphaPre,X,Y):
  if type(X) is not type(Y): raise Exception('Types of X and Y must match')
  if X.tag != Y.tag: raise Exception('Datatypes of X and Y must match')
  alpha = TagToType(X.tag)(alphaPre)
  args = [alpha,X.obj,Y.obj]
  if type(X) is Matrix:
    if   X.tag == iTag: lib.ElAxpy_i(*args)
    elif X.tag == sTag: lib.ElAxpy_s(*args)
    elif X.tag == dTag: lib.ElAxpy_d(*args)
    elif X.tag == cTag: lib.ElAxpy_c(*args)
    elif X.tag == zTag: lib.ElAxpy_z(*args)
    else: DataExcept()
  elif type(X) is DistMatrix:
    if   X.tag == iTag: lib.ElAxpyDist_i(*args)
    elif X.tag == sTag: lib.ElAxpyDist_s(*args)
    elif X.tag == dTag: lib.ElAxpyDist_d(*args)
    elif X.tag == cTag: lib.ElAxpyDist_c(*args)
    elif X.tag == zTag: lib.ElAxpyDist_z(*args)
    else: DataExcept()
  elif type(X) is SparseMatrix:
    if   X.tag == iTag: lib.ElAxpySparse_i(*args)
    elif X.tag == sTag: lib.ElAxpySparse_s(*args)
    elif X.tag == dTag: lib.ElAxpySparse_d(*args)
    elif X.tag == cTag: lib.ElAxpySparse_c(*args)
    elif X.tag == zTag: lib.ElAxpySparse_z(*args)
    else: DataExcept()
  elif type(X) is DistSparseMatrix:
    if   X.tag == iTag: lib.ElAxpyDistSparse_i(*args)
    elif X.tag == sTag: lib.ElAxpyDistSparse_s(*args)
    elif X.tag == dTag: lib.ElAxpyDistSparse_d(*args)
    elif X.tag == cTag: lib.ElAxpyDistSparse_c(*args)
    elif X.tag == zTag: lib.ElAxpyDistSparse_z(*args)
    else: DataExcept()
  elif type(X) is DistMultiVec:
    if   X.tag == iTag: lib.ElAxpyDistMultiVec_i(*args)
    elif X.tag == sTag: lib.ElAxpyDistMultiVec_s(*args)
    elif X.tag == dTag: lib.ElAxpyDistMultiVec_d(*args)
    elif X.tag == cTag: lib.ElAxpyDistMultiVec_c(*args)
    elif X.tag == zTag: lib.ElAxpyDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()

# AxpyTrapezoid
# -------------
lib.ElAxpyTrapezoid_i.argtypes = \
lib.ElAxpyTrapezoidDist_i.argtypes = \
lib.ElAxpyTrapezoidSparse_i.argtypes = \
lib.ElAxpyTrapezoidDistSparse_i.argtypes = \
  [c_uint,iType,c_void_p,c_void_p,iType]

lib.ElAxpyTrapezoid_s.argtypes = \
lib.ElAxpyTrapezoidDist_s.argtypes = \
lib.ElAxpyTrapezoidSparse_s.argtypes = \
lib.ElAxpyTrapezoidDistSparse_s.argtypes = \
  [c_uint,sType,c_void_p,c_void_p,iType]

lib.ElAxpyTrapezoid_d.argtypes = \
lib.ElAxpyTrapezoidDist_d.argtypes = \
lib.ElAxpyTrapezoidSparse_d.argtypes = \
lib.ElAxpyTrapezoidDistSparse_d.argtypes = \
  [c_uint,dType,c_void_p,c_void_p,iType]

lib.ElAxpyTrapezoid_c.argtypes = \
lib.ElAxpyTrapezoidDist_c.argtypes = \
lib.ElAxpyTrapezoidSparse_c.argtypes = \
lib.ElAxpyTrapezoidDistSparse_c.argtypes = \
  [c_uint,cType,c_void_p,c_void_p,iType]

lib.ElAxpyTrapezoid_z.argtypes = \
lib.ElAxpyTrapezoidDist_z.argtypes = \
lib.ElAxpyTrapezoidSparse_z.argtypes = \
lib.ElAxpyTrapezoidDistSparse_z.argtypes = \
  [c_uint,zType,c_void_p,c_void_p,iType]

def AxpyTriangle(uplo,alphaPre,X,Y,offset=0):
  if type(X) is not type(Y): raise Exception('Types of X and Y must match')
  if X.tag != Y.tag: raise Exception('Datatypes of X and Y must match')
  alpha = TagToType(X.tag)(alphaPre)
  args = [uplo,alpha,X.obj,Y.obj,offset]
  if type(X) is Matrix:
    if   X.tag == iTag: lib.ElAxpyTriangle_i(*args)
    elif X.tag == sTag: lib.ElAxpyTriangle_s(*args)
    elif X.tag == dTag: lib.ElAxpyTriangle_d(*args)
    elif X.tag == cTag: lib.ElAxpyTriangle_c(*args)
    elif X.tag == zTag: lib.ElAxpyTriangle_z(*args)
    else: DataExcept()
  elif type(X) is DistMatrix:
    if   X.tag == iTag: lib.ElAxpyTriangleDist_i(*args)
    elif X.tag == sTag: lib.ElAxpyTriangleDist_s(*args)
    elif X.tag == dTag: lib.ElAxpyTriangleDist_d(*args)
    elif X.tag == cTag: lib.ElAxpyTriangleDist_c(*args)
    elif X.tag == zTag: lib.ElAxpyTriangleDist_z(*args)
    else: DataExcept()
  elif type(X) is SparseMatrix:
    if   X.tag == iTag: lib.ElAxpyTriangleSparse_i(*args)
    elif X.tag == sTag: lib.ElAxpyTriangleSparse_s(*args)
    elif X.tag == dTag: lib.ElAxpyTriangleSparse_d(*args)
    elif X.tag == cTag: lib.ElAxpyTriangleSparse_c(*args)
    elif X.tag == zTag: lib.ElAxpyTriangleSparse_z(*args)
    else: DataExcept()
  elif type(X) is DistSparseMatrix:
    if   X.tag == iTag: lib.ElAxpyTriangleDistSparse_i(*args)
    elif X.tag == sTag: lib.ElAxpyTriangleDistSparse_s(*args)
    elif X.tag == dTag: lib.ElAxpyTriangleDistSparse_d(*args)
    elif X.tag == cTag: lib.ElAxpyTriangleDistSparse_c(*args)
    elif X.tag == zTag: lib.ElAxpyTriangleDistSparse_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Column norms
# ------------
lib.ElColumnTwoNormsDistMultiVec_s.argtypes = \
lib.ElColumnTwoNormsDistMultiVec_d.argtypes = \
lib.ElColumnTwoNormsDistMultiVec_c.argtypes = \
lib.ElColumnTwoNormsDistMultiVec_z.argtypes = \
  [c_void_p,c_void_p]

def ColumnTwoNorms(A):
  if type(A) is DistMultiVec:
    norms = Matrix(TagToType(Base(A.tag)))
    args = [A.obj,norms.obj]
    if   A.tag == sTag: lib.ElColumnTwoNormsDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElColumnTwoNormsDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElColumnTwoNormsDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElColumnTwoNormsDistMultiVec_z(*args)
    else: DataExcept()
    return norms
  else: TypeExcept()

# Concatenation
# -------------

# Horizontal concatenation
# ^^^^^^^^^^^^^^^^^^^^^^^^
lib.ElHCat_i.argtypes = \
lib.ElHCat_s.argtypes = \
lib.ElHCat_d.argtypes = \
lib.ElHCat_c.argtypes = \
lib.ElHCat_z.argtypes = \
lib.ElHCatDist_i.argtypes = \
lib.ElHCatDist_s.argtypes = \
lib.ElHCatDist_d.argtypes = \
lib.ElHCatDist_c.argtypes = \
lib.ElHCatDist_z.argtypes = \
lib.ElHCatSparse_i.argtypes = \
lib.ElHCatSparse_s.argtypes = \
lib.ElHCatSparse_d.argtypes = \
lib.ElHCatSparse_c.argtypes = \
lib.ElHCatSparse_z.argtypes = \
lib.ElHCatDistSparse_i.argtypes = \
lib.ElHCatDistSparse_s.argtypes = \
lib.ElHCatDistSparse_d.argtypes = \
lib.ElHCatDistSparse_c.argtypes = \
lib.ElHCatDistSparse_z.argtypes = \
lib.ElHCatDistMultiVec_i.argtypes = \
lib.ElHCatDistMultiVec_s.argtypes = \
lib.ElHCatDistMultiVec_d.argtypes = \
lib.ElHCatDistMultiVec_c.argtypes = \
lib.ElHCatDistMultiVec_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]

def HCat(A,B):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatype of A and B must match')
  if type(A) is Matrix:
    C = Matrix(A.tag)
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElHCat_i(*args)
    elif A.tag == sTag: lib.ElHCat_s(*args)
    elif A.tag == dTag: lib.ElHCat_d(*args)
    elif A.tag == cTag: lib.ElHCat_c(*args)
    elif A.tag == zTag: lib.ElHCat_z(*args)
    else: DataExcept()
    return C
  elif type(A) is DistMatrix:
    C = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElHCatDist_i(*args)
    elif A.tag == sTag: lib.ElHCatDist_s(*args)
    elif A.tag == dTag: lib.ElHCatDist_d(*args)
    elif A.tag == cTag: lib.ElHCatDist_c(*args)
    elif A.tag == zTag: lib.ElHCatDist_z(*args)
    else: DataExcept()
    return C
  elif type(A) is SparseMatrix: 
    C = SparseMatrix(A.tag)
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElHCatSparse_i(*args)
    elif A.tag == sTag: lib.ElHCatSparse_s(*args)
    elif A.tag == dTag: lib.ElHCatSparse_d(*args)
    elif A.tag == cTag: lib.ElHCatSparse_c(*args)
    elif A.tag == zTag: lib.ElHCatSparse_z(*args)
    else: DataExcept()
    return C
  elif type(A) is DistSparseMatrix:
    C = DistSparseMatrix(A.tag,A.Grid())
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElHCatDistSparse_i(*args)
    elif A.tag == sTag: lib.ElHCatDistSparse_s(*args)
    elif A.tag == dTag: lib.ElHCatDistSparse_d(*args)
    elif A.tag == cTag: lib.ElHCatDistSparse_c(*args)
    elif A.tag == zTag: lib.ElHCatDistSparse_z(*args)
    else: DataExcept()
    return C
  elif type(A) is DistMultiVec:
    C = DistMultiVec(A.tag,A.Grid())
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElHCatDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElHCatDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElHCatDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElHCatDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElHCatDistMultiVec_z(*args)
    else: DataExcept()
    return C
  else: TypeExcept()

# Vertical concatenation
# ^^^^^^^^^^^^^^^^^^^^^^
lib.ElVCat_i.argtypes = \
lib.ElVCat_s.argtypes = \
lib.ElVCat_d.argtypes = \
lib.ElVCat_c.argtypes = \
lib.ElVCat_z.argtypes = \
lib.ElVCatDist_i.argtypes = \
lib.ElVCatDist_s.argtypes = \
lib.ElVCatDist_d.argtypes = \
lib.ElVCatDist_c.argtypes = \
lib.ElVCatDist_z.argtypes = \
lib.ElVCatSparse_i.argtypes = \
lib.ElVCatSparse_s.argtypes = \
lib.ElVCatSparse_d.argtypes = \
lib.ElVCatSparse_c.argtypes = \
lib.ElVCatSparse_z.argtypes = \
lib.ElVCatDistSparse_i.argtypes = \
lib.ElVCatDistSparse_s.argtypes = \
lib.ElVCatDistSparse_d.argtypes = \
lib.ElVCatDistSparse_c.argtypes = \
lib.ElVCatDistSparse_z.argtypes = \
lib.ElVCatDistMultiVec_i.argtypes = \
lib.ElVCatDistMultiVec_s.argtypes = \
lib.ElVCatDistMultiVec_d.argtypes = \
lib.ElVCatDistMultiVec_c.argtypes = \
lib.ElVCatDistMultiVec_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]
